--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <div class="watch">
     <h1 id="clock">00:00:00</h1>
  </div>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
